tdf#67379 - sw: treat clicking h/f-fly the same as any other

Why should clicking on a frame/image in a header act any differently from
a one insde the text body?

(The only time frames (or any kind of fly) required a double click occured
when switching from inside a header to a body-fly or from inside the body
to a h/f-fly. This patch removes that oddball corner-case.)

Now all frames are handled with a single click and there will not be
an impact on double-clicking anymore.

regression caused by 7e2f98d0a0c4a0f36a94353a256e7cc5caa3113b and its
prior commit which say:
> Header/Footer: fixed click on frames over the header/footer area.
> The main problem here was due to the click to show the separator when
> there is no header or footer under the frame. That code was just exiting
> MouseButtonDown too early, which isn't good.

> Now, double-click actually selects a frame anchored in header/footer.

confirmed that single-clicking on frames over the header/footer section
still shows the header blue-line.
Change-Id: I4770cfe7898202929742743931e22de8bf233b03